-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.8.0
-
None
-
3
-
9223372036854775807
lock handles are to be zeroed by the return from the intent
05:20:43:LustreError: 31441:0:(mdt_handler.c:2712:mdt_lock_handle_fini()) ASSERTION( !lustre_handle_is_used(&lh->mlh_reg_lh) ) failed: 05:20:43:LustreError: 31441:0:(mdt_handler.c:2712:mdt_lock_handle_fini()) LBUG 05:20:43:Pid: 31441, comm: mdt00_002 05:20:43: 05:20:43:Call Trace: 05:20:43: [<ffffffffa05d2875>] libcfs_debug_dumpstack+0x55/0x80 [libcfs] 05:20:43: [<ffffffffa05d2e77>] lbug_with_loc+0x47/0xb0 [libcfs] 05:20:43: [<ffffffffa0e2f47b>] mdt_lock_handle_fini+0x4b/0x80 [mdt] 05:20:43: [<ffffffffa0e37390>] mdt_thread_info_fini+0xe0/0x190 [mdt] 05:20:43: [<ffffffffa0e3bee2>] mdt_intent_policy+0xe2/0xc70 [mdt] 05:20:43: [<ffffffffa06f18c7>] ldlm_lock_enqueue+0x127/0x970 [ptlrpc] 05:20:43: [<ffffffffa071f3d7>] ldlm_handle_enqueue0+0x807/0x15a0 [ptlrpc] 05:20:43: [<ffffffffa05de6c1>] ? libcfs_debug_msg+0x41/0x50 [libcfs] 05:20:43: [<ffffffffa07aa321>] tgt_enqueue+0x61/0x230 [ptlrpc] 05:20:43: [<ffffffffa07aadac>] tgt_request_handle+0x8bc/0x12e0 [ptlrpc] 05:20:43: [<ffffffffa0752691>] ptlrpc_main+0xe41/0x1910 [ptlrpc] 05:20:43: [<ffffffffa0751850>] ? ptlrpc_main+0x0/0x1910 [ptlrpc] 05:20:43: [<ffffffff810a0fce>] kthread+0x9e/0xc0 05:20:43: [<ffffffff8100c28a>] child_rip+0xa/0x20 05:20:43: [<ffffffff810a0f30>] ? kthread+0x0/0xc0 05:20:43: [<ffffffff8100c280>] ? child_rip+0x0/0x20 05:20:43: 05:20:43:Kernel panic - not syncing: LBUG
- is duplicated by
-
LU-7599 recovery-small test_130b: mds panic: (mdt_handler.c:2712:mdt_lock_handle_fini()) LBUG
-
- Closed
-
- is related to
-
LU-8043 MDS running lustre 2.5.5+ OOM when running with Lustre 2.8 GA clients
-
- Resolved
-
- is related to
-
LU-7173 ldlm_lock_destroy_internal() LBUG encountered during 2.8 large scale testing
-
- Resolved
-